<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".InformacionContacto">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/InfoContacto"
            android:textSize="25dp"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="40dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cedula"
            android:textSize="18dp"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="40dp" />
        <TextView
            android:id="@+id/cedulaContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="40dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="18dp"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="40dp" />
        <TextView
            android:id="@+id/nombreContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="40dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ape1"
            android:textSize="18dp"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="40dp" />
        <TextView
            android:id="@+id/primerApe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="40dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ape2"
            android:textSize="18dp"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="40dp" />
        <TextView
            android:id="@+id/segundoApe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="40dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nacionalidad"
            android:textSize="18dp"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="40dp" />
        <TextView
            android:id="@+id/nacionalidadContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="40dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/FechaN"
            android:textSize="18dp"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="40dp" />

        <TextView
            android:id="@+id/fechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="40dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Ubicacion"
            android:textSize="18dp"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="40dp" />
        <TextView
            android:id="@+id/ubicacion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="40dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/patologia"
            android:textSize="18dp"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="40dp" />
        <TextView
            android:id="@+id/personaPatologia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="40dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Correo"
            android:textSize="18dp"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="40dp" />
        <TextView
            android:id="@+id/Correo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="40dp" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Paciente"
            android:textSize="18dp"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="40dp" />
        <TextView
            android:id="@+id/Paciente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="17dp"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="40dp" />
        <Button
            android:id="@+id/editarInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Editar Información" />
        <Button
            android:id="@+id/BorrarContacto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Borrar Contacto" />

        <Button
            android:id="@+id/Volver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Volver" />


    </LinearLayout>

</ScrollView>